modified:   src/library.properties

--- a/src/library.properties
+++ b/src/library.properties
@@ -1,10 +1,14 @@
 name=ESP32_Victron_Modbus
-version=1.0.1
-author=Michael Niemann
-maintainer=michael.niemann@ewe-net
-sentence=Library zur Kommunikation mit Victron Modbus-Geräten via ModbusIP.
-paragraph=Diese Library kapselt den Zugriff auf Modbus-Register mit flexibler Umrechnung und Debug-Ausgaben.
+version=1.0.0
+author=Michael Niemann <michael.niemann@ewe-net>
+maintainer=Michael Niemann <michael.niemann@ewe-net>
+sentence=Ein flexibles Modbus-Register-Management für ESP32, ESP8266 (und Arduino.)
+paragraph=Diese Bibliothek ermöglicht einfaches Lesen und Schreiben von Modbus-Registern über TCP. Ideal für Projekte mit Victron Energy, Solaranlagen, Smart-Metering und IoT-Energieüberwachung. Unterstützt individuelle Register-Definitionen, Mapping und mehrere Geräte.
 category=Communication
 url=https://github.com/oOoAndroidoOo/ESP32_Victron_Modbus.git
+architectures=*
+includes=ESP32_Victron_Modbus.h
 depends=https://github.com/emelianov/modbus-esp8266.git
 architectures=*
+
+keywords=modbus,modbus-tcp,modbus-rtu,arduino,esp32,esp8266,modbus-esp8266,modbus-communication,register-mapping,modbus-register,smart-energy,battery-management,solar-inverter,victron,victron-energy,victron-modbus,energy-monitoring,iot,iot-energy,power-monitoring,modbus-library,esp32-modbus,esp8266-modbus,energy-data,arduino-library,register-list,modbus-manager,smart-grid,solar-power,renewable-energy,arduino-esp32,arduino-esp8266
